After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722274 - regression with python2: Modules/gcmodule.c:326: visit_decref: Assertion `gc->gc.gc_refs != 0' failed.
regression with python2: Modules/gcmodule.c:326: visit_decref: Assertion `gc-...
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-15 15:49 UTC by Colin Walters
Modified: 2014-01-15 21:08 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Colin Walters 2014-01-15 15:49:47 UTC
This is a recent regression.  I noticed that the gnome-software InstalledTests (which are written in pygobject-python2) started failing recently.

But this is easy to reproduce by just running gnome-tweak-tool in current Continuous too.
Comment 1 Simon Feltman 2014-01-15 20:56:32 UTC
I've committed a potential fix:
https://git.gnome.org/browse/pygobject/commit/?id=7222a37

The commit definitally fixes a real potential problem. However, I am unable 
to verify if it fixes the problem logged here.
Comment 2 Colin Walters 2014-01-15 21:08:01 UTC
Confirmed this fix works.