Fix reference sharing of gi sub-modules in Python 2

Ensure we add a new reference to sub-modules added to gi._gi. This may
have caused GC errors upon exiting the Python process since a reference was
shared by sys.modules and gi._gi.

https://bugzilla.gnome.org/show_bug.cgi?id=722274